fix: enhance password input handling and update icon visibility logic

--- a/loginSingupResponsive.css
+++ b/loginSingupResponsive.css
@@ -1,109 +1,107 @@
 @media screen and (max-width: 660px) {
-  .join_logo_img {
-    height: 290px;
-    width: 200px;
-  }
-  .login_card {
-    width: 80%;
-    height: auto;
-    padding-top: 32px;
-    padding-bottom: 32px;
-  }
+    .join_logo_img {
+        height: 290px;
+        width: 200px;
+    }
+    .login_card {
+        width: 80%;
+        height: auto;
+        padding-top: 32px;
+        padding-bottom: 32px;
+    }
 
-  #loginForm {
-    width: 100%;
-  }
+    #loginForm {
+        width: 100%;
+    }
 
-  .input_login_container {
-    width: 100%; 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
+    .input_login_container {
+        width: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
 
-  .lock_icon {
-    right: 15px;
-}
+    .lock_icon {
+        right: 15px;
+    }
 
-  #loginEmail,
-  .lock_icon_group {
-    width: 80% !important;
-    max-width: 422px !important;
-    box-sizing: border-box !important;
-    margin: 12px 21px !important;
-    display: block !important;
-  }
-  
+    #loginEmail,
+    .lock_icon_group {
+        width: 80% !important;
+        width: calc(100% - 64px);
+        max-width: 422px !important;
+        box-sizing: border-box !important;
+        display: block !important;
+    }
 
-  .lock_icon_group .password_input {
-    width: 100% !important;
-    margin: 0 !important;
-    padding-left: 10px !important;
-    box-sizing: border-box !important;
-    display: block !important;
-  }
+    .lock_icon_group .password_input {
+        width: 100% !important;
+        margin: 0 !important;
+        padding-left: 10px !important;
+        box-sizing: border-box !important;
+        display: block !important;
+    }
 
-  .login_btn {
-    width: 80px;
-  }
+    .login_btn {
+        width: 80px;
+    }
 
-  .guest_login_btn {
-    width: 135px;
-  }
+    .guest_login_btn {
+        width: 135px;
+    }
 
-  .signup_card {
-    padding-top: 16px;
-    padding-bottom: 16px;
-    height: auto;
-  }
+    .signup_card {
+        padding-top: 16px;
+        padding-bottom: 16px;
+        height: auto;
+    }
 
-  .left_arrow_icon {
-    left: 20px;
-  }
+    .left_arrow_icon {
+        left: 20px;
+    }
 
-  .login_wrapper h2 {
-    font-size: 2.8rem;
-    text-align: center;
-  }
+    .login_wrapper h2 {
+        font-size: 2.8rem;
+        text-align: center;
+    }
 
-  .signupForm {
-    width: 100%;
-  }
+    .signupForm {
+        width: 100%;
+    }
 
-  .input_login_container {
-    gap: 32px;
-    margin-bottom: 56px;
-  }
+    .input_login_container {
+        gap: 32px;
+        margin-bottom: 56px;
+    }
 
-  .input_login_container input {
-    margin-top: 0;
-    margin-bottom: 0;
-    width: calc(100% - 64px);
-  }
+    .input_login_container input {
+        margin-top: 0;
+        margin-bottom: 0;
+        width: calc(100% - 64px);
+    }
 
-  .button_login_container {
-    flex-direction: column;
-    gap: 21px;
-  }
-  .login_btn {
-    width: 180px;
-  }
+    .button_login_container {
+        flex-direction: column;
+        gap: 21px;
+    }
+    .login_btn {
+        width: 180px;
+    }
 
-  .guest_login_btn {
-    width: 180px;
-  }
-
+    .guest_login_btn {
+        width: 180px;
+    }
 }
 
 @media screen and (max-width: 420px) {
-  .signup_login_mobile {
-    gap: 16px;
-  }
+    .signup_login_mobile {
+        gap: 16px;
+    }
 }
 
 @media screen and (max-height: 1030px) {
-    .input_login_container{
+    .input_login_container {
         gap: 16px;
     }
 }
@@ -148,7 +146,7 @@
 }
 
 @media screen and (max-height: 675px) {
-    .join_logo_img{
+    .join_logo_img {
         height: 240px;
         width: 160px;
     }
